@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed crashes when detecting illegal utf 8 sequences
+	  in Fl_Text_* widgets (STR #2348)
 	- Fixed Fl_Text_Display Tabulator calculations (STR #2450)
 	- Fixed file access code to use UTF-8 strings (STR #2440)
 	- Fixed ARM Unicode cross compilation issue (STR #2432)
